<resources>
    <string name="app_name">Bazaar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="timeline">Timeline</string>
    <string name="my_market">My market</string>
    <string name="my_fares">My fares</string>
    <string name="log_in">Log in</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="tel">Phone number</string>
    <string name="new_to_bazaar">New to Bazaaar?</string>
    <string name="sign_up">Sign up</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="username">User name</string>
    <string name="input_text">Input text</string>
    <string name="give_us_details_about_your_fare">Give us details about your fare</string>
    <string name="char_limit">Character limit exceeded!</string>
    <string name="mandatory_title">Your fare must have a title</string>
    <string name="fair_price">Give your fare a fair price</string>
    <string name="add_description">Describe your product, like its origin, made for</string>
    <string name="add_valid_number">Give a valid number!</string>
    <string name="inactive">Inactive</string>
    <string name="active">Active</string>
    <string name="email">Email</string>
    <string name="title">Title</string>
    <string name="price_amount">Price/amount</string>
    <string name="ron">RON</string>
    <string name="available_amount">Available amount</string>
    <string name="kg">KG</string>
    <string name="short_description">Short description</string>
    <string name="launch_my_fare">Launch my fare</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="reset_password">We will send you an email with instructions on how to reset your passsword</string>
    <string name="email_me">Email me</string>
    <string name="phone_number">Phone number</string>
    <string name="publish">Publish</string>
    <string name="click_here">Click here</string>
    <string name="order_now">Order now</string>
    <string name="amount_ordered">Amount ordered</string>
    <string name="description">Description</string>
    <string name="send_my_order">Send my order</string>
    <string name="total_price">Total price: %1$s</string>
    <string name="open">Open</string>
    <string name="price_per_amount">%1$s %2$s/%3$s </string>
    <string name="amount">Amount: %1$s </string>
    <string name="price">Price: %1$s </string>
    <string name="seller">Seller name: %1$s</string>
    <string name="ongoing_sales">Ongoing sales</string>
    <string name="ongoing_orders">Ongoing Orders</string>
    <string name="incoming_order">Incoming order</string>
    <string name="declined_order">Declined order</string>
    <string name="delivering_order">Delivering order</string>
    <string name="delivered_order">Delivered order</string>
    <string name="accepted_order">Accepted order</string>
    <string name="invalid_user_name">Invalid user name</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_password">Invalid password</string>
    <string name="invalid_phone_number">Invalid phone number</string>
    <string name="profile">profile</string>
    <string name="content_description_profile">Profile icon</string>
    <string name="search">search</string>
    <string name="content_description_search">Search icon</string>

    <string-array name="currencies">
        <item>RON</item>
        <item>HUF</item>
        <item>EURO</item>
    </string-array>

    <string-array name="units">
        <item>KG</item>
        <item>L</item>
        <item>NO</item>
    </string-array>

    <string-array name="states">
        <item>Incoming order</item>
        <item>Accepted order</item>
        <item>Declined order</item>
        <item>Delivering order</item>
        <item>Delivered order</item>
    </string-array>
</resources>