<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".fragment.register.RegisterFragment">

    <View
        android:id="@+id/view2"
        android:layout_width="300dp"
        android:layout_height="500dp"
        android:background="@color/bDark"
        android:foregroundGravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_fragment_tv_margin_top"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="@dimen/login_fragment_text_view_text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/tv_register_user_name"
        app:layout_constraintTop_toTopOf="@+id/view2" />

    <EditText
        android:id="@+id/tv_register_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/boarder"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColor="@color/dirtyWhite"
        android:textColorHint="@color/hintGrey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_register" />

    <EditText
        android:id="@+id/tv_register_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/boarder"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="@dimen/login_fragment_edit_text_view_padding"
        android:textColor="@color/dirtyWhite"
        android:textColorHint="@color/hintGrey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_register_user_name" />

    <EditText
        android:id="@+id/tv_register_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/boarder"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="@dimen/login_fragment_edit_text_view_padding"
        android:textColor="@color/dirtyWhite"
        android:textColorHint="@color/hintGrey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_register_email" />

    <EditText
        android:id="@+id/tv_register_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/boarder"
        android:ems="10"
        android:hint="@string/tel"
        android:inputType="phone"
        android:padding="@dimen/login_fragment_edit_text_view_padding"
        android:textColor="@color/dirtyWhite"
        android:textColorHint="@color/hintGrey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_register_password" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/turquoise"
        android:ems="12"
        android:radius="@dimen/login_fragment_button_radius"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/login_fragment_button_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_register_phone_number" />

    <TextView
        android:id="@+id/tv_registered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/already_have_an_account"
        android:textColor="@color/dirtyWhite"
        app:layout_constraintStart_toStartOf="@+id/button_register"
        app:layout_constraintTop_toBottomOf="@+id/button_register"
        app:layout_constraintEnd_toStartOf="@id/tv_log_in"/>

    <TextView
        android:id="@+id/tv_log_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="25dp"
        android:text="@string/log_in"
        android:textColor="@color/turquoise"
        app:layout_constraintEnd_toEndOf="@id/button_register"
        app:layout_constraintStart_toEndOf="@id/tv_registered"
        app:layout_constraintTop_toBottomOf="@+id/button_register" />

</androidx.constraintlayout.widget.ConstraintLayout>