<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_add_product_detail_image"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@color/turquoise"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/inactive"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_add_product_detail_image"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/et_add_product_detail_give_us_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/give_us_details_about_your_fare"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch1" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_add_product_detail_title"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        app:helperTextTextColor="@color/red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_add_product_detail_give_us_details">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_add_product_detail_title1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/title" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_add_product_detail_price_amount"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        app:helperTextTextColor="@color/red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_add_product_detail_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_add_product_detail_price_amount1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/price_amount" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        app:boxStrokeColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/et_add_product_detail_price_amount"
        app:layout_constraintTop_toBottomOf="@+id/et_add_product_detail_title">

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="none"
            android:text="@string/ron" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_add_product_detail_total_amount"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_add_product_detail_price_amount">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_add_product_detail_total_amount1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/available_amount" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        app:boxStrokeColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/et_add_product_detail_total_amount"
        app:layout_constraintTop_toBottomOf="@+id/et_add_product_detail_price_amount">

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="none"
            android:text="@string/kg" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_add_product_detail_description"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        app:counterEnabled="true"
        app:counterMaxLength="150"
        app:helperTextTextColor="@color/red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_add_product_detail_total_amount">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_add_product_detail_description1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/short_description" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/launch_my_fare_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/launch_my_fare"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_add_product_detail_description">

    </Button>
</androidx.constraintlayout.widget.ConstraintLayout>