<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".fragment.login.ForgotPasswordFragment">

    <View
        android:id="@+id/view1"
        android:layout_width="350dp"
        android:layout_height="300dp"
        android:layout_marginTop="80dp"
        android:background="@color/bDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_forgot_password_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        android:textSize="@dimen/login_fragment_text_view_text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_reset_email"
        app:layout_constraintTop_toTopOf="@+id/view1" />

    <TextView
        android:id="@+id/tv_forgot_password_text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:layout_marginTop="25dp"
        android:text="@string/reset_password"
        android:textColor="@color/hintGrey"
        app:layout_constraintStart_toStartOf="@+id/view1"
        app:layout_constraintEnd_toEndOf="@+id/view1"
        app:layout_constraintTop_toBottomOf="@id/tv_forgot_password_text1" />

    <EditText
        android:id="@+id/tv_reset_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/boarder"
        android:ems="12"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="@dimen/login_fragment_edit_text_view_padding"
        android:textColor="@color/dirtyWhite"
        android:textColorHint="@color/hintGrey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_forgot_password_text2" />

    <Button
        android:id="@+id/btn_email_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/turquoise"
        android:ems="15"
        android:radius="@dimen/login_fragment_button_radius"
        android:text="@string/email_me"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/login_fragment_button_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_reset_email" />

</androidx.constraintlayout.widget.ConstraintLayout>