<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.AddDetailMarketItemFragment"
        android:layout_marginBottom="60dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_add_product_detail_image"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@color/turquoise" />

            <ImageView
                android:id="@+id/iv_add_product_detail_upload_image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="50dp"
                android:backgroundTint="@color/turquoise"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/frame"/>

            <Switch
                android:id="@+id/switch1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inactive"
                app:layout_constraintTop_toBottomOf="@+id/iv_add_product_detail_image"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <TextView
                android:id="@+id/et_add_product_detail_give_us_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:text="@string/give_us_details_about_your_fare"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/switch1" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:id="@+id/et_add_product_detail_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_add_product_detail_give_us_details"
                android:layout_marginTop="15dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:helperTextTextColor="@color/red"
                app:counterEnabled="true"
                app:counterMaxLength="30">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_add_product_detail_title1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/title" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:id="@+id/et_add_product_detail_price_amount"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_add_product_detail_title"
                android:layout_marginTop="15dp"
                android:layout_marginStart="20dp"
                app:helperTextTextColor="@color/red"
                app:counterEnabled="true"
                app:counterMaxLength="10">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_add_product_detail_price_amount1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/price_amount" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/et_add_product_detail_price_amount"
                app:layout_constraintTop_toBottomOf="@+id/et_add_product_detail_title"
                android:layout_marginTop="15dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                app:boxStrokeColor="@color/white">
                <AutoCompleteTextView
                    android:id="@+id/autoCompleteTextView1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:inputType="none"
                    android:text="@string/ron" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:id="@+id/et_add_product_detail_total_amount"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_add_product_detail_price_amount"
                android:layout_marginTop="15dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:counterEnabled="true"
                app:counterMaxLength="10">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_add_product_detail_total_amount1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/available_amount" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/et_add_product_detail_total_amount"
                app:layout_constraintTop_toBottomOf="@+id/et_add_product_detail_price_amount"
                android:layout_marginTop="15dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                app:boxStrokeColor="@color/white">
                <AutoCompleteTextView
                    android:id="@+id/autoCompleteTextView2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:inputType="none"
                    android:text="@string/kg" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:id="@+id/et_add_product_detail_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_add_product_detail_total_amount"
                android:layout_marginTop="15dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:helperTextTextColor="@color/red"
                app:counterEnabled="true"
                app:counterMaxLength="150">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_add_product_detail_description1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/short_description" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/launch_my_fare_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/launch_my_fare"
                android:textSize="14sp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_add_product_detail_description">

            </Button>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>